# kik-batwowzki-comvis

FreeglutProjects/: CMakeLists.txt
FreeglutProjects/archive/: DiazGroup_FirstScene.mkv  Diaz_MarkEron_Icosahedron.cpp  Diaz_SmilingFaceVBO.cpp  findErrors.cpp  hexagon.cpp  practice1.cpp  practice2.cpp  practice3.cpp  practice4.cpp  simpleSquare.cpp  three_broken_circles_rotate.cpp  triangleFan.cpp
FreeglutProjects/archive/output/: findErrors
FreeglutProjects/src/: AudioManager.cpp  AudioManager.h  Common.h  DiazGroup_FirstScene.cpp  DiazGroup_FirstScene_New.cpp  DrawingUtils.cpp  DrawingUtils.h  Scene1_BikeInGarage.cpp  Scene1_BikeInGarage.h  Scene2_GarageTakeoff.cpp  Scene2_GarageTakeoff.h  Scene3_MeetingFriends.cpp  Scene3_MeetingFriends.h  Scene4_GroupBiking.cpp  Scene4_GroupBiking.h  Scene5_FinalPose.cpp  Scene5_FinalPose.h  SceneBase.h  main.cpp
